--- a/babyDesMasc.html
+++ b/babyDesMasc.html
@@ -146,63 +146,55 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-kit1-0a6" id="div-meia">
-                    <div class="container"> <img src="img-baby/kit1-desenhada0a6.png" alt="Kit 3 pares de meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit Nº1</h3>
-                        <h3 class="numeracao">0 á 6 meses</h3>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,10</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
+                <div class="parte2">
+                    <div class="todas-as-meias-baby-des-masc">
+                        <div class="Quadrado-da-meia-kit1-0a6 kit" id="div-meia">
+                            <div class="container"> <img src="img-baby/kit1-desenhada0a6.png" alt="Kit 3 pares de meia">
+                            </div>
+                            <div class="informacoes-meia">
+                                <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit 3 Pares</h3>
+                                <h3 class="numeracao">0 á 6 meses</h3>
+                                <div class="cores-kit-des-0a6">
+                                    <div class="kit1Des0a6">
+                                        <p>1</p>
+                                    </div>
+                                    <div class="kit2Des0a6">
+                                        <p>2</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="preco-informacoes">
+                                <h3 class="preco">R$ 11,10</h3>
+                                <h3 class="texto-a-vista">Á Vista</h3>
+                                <button class="botao-euQuero">Eu Quero!</button>
+                            </div>
+                        </div>
+
+
+                        <div class="Quadrado-da-meia-kit1-6a12 kit" id="div-meia">
+                            <div class="container"> <img src="img-baby/kit1-desenhada6a12.png"
+                                    alt="Kit 3 pares de meia">
+                            </div>
+                            <div class="informacoes-meia">
+                                <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit 3 Pares</h3>
+                                <h3 class="numeracao">6 á 12 meses</h3>
+                                <div class="cores-kit-des-0a6">
+                                    <div class="kit1Des6a12">
+                                        <p>1</p>
+                                    </div>
+                                    <div class="kit2Des6a12">
+                                        <p>2</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="preco-informacoes">
+                                <h3 class="preco">R$ 11,40</h3>
+                                <h3 class="texto-a-vista">Á Vista</h3>
+                                <button class="botao-euQuero">Eu Quero!</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
-                <div class="Quadrado-da-meia-kit2-0a6" id="div-meia">
-                    <div class="container"> <img src="img-baby/kit2-desenhada0a6.png" alt="Kit 3 pares de meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit Nº2</h3>
-                        <h3 class="numeracao">0 á 6 meses</h3>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,10</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-kit1-6a12" id="div-meia">
-                    <div class="container"> <img src="img-baby/kit1-desenhada6a12.png" alt="Kit 3 pares de meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit Nº1</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,40</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-kit2-6a12 kit" id="div-meia">
-                    <div class="container"> <img src="img-baby/kit2-desenhada6a12.png" alt="Kit 3 pares de meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit Nº2</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,40</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-            </div>
         </section>
     </main>
 
@@ -313,6 +305,14 @@
                 azulTurquesa: 'img-baby/leaoAzul-turquesa.png',
                 cinzaMescla: 'img-baby/leaoCinza-mescla.png'
             },
+            'Quadrado-da-meia-kit1-0a6': {
+                kit1Des0a6: 'img-baby/kit1-desenhada0a6.png',
+                kit2Des0a6: 'img-baby/kit2-desenhada0a6.png'
+            },
+            'Quadrado-da-meia-kit1-6a12': {
+                kit1Des6a12: 'img-baby/kit1-desenhada6a12.png',
+                kit2Des6a12: 'img-baby/kit2-desenhada6a12.png'
+            },
         };
 
         document.querySelectorAll('.todas-as-meias-baby-des-masc > div').forEach((quadrado) => {
@@ -320,7 +320,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.verde, .offwhite, .cinza, .branca, .azul, .marinho, .marrom, .azulTriangulo, .vermelho, .amarelo, .azulTurquesa, .cinzaMescla');
+            const cores = quadrado.querySelectorAll('.verde, .offwhite, .cinza, .branca, .azul, .marinho, .marrom, .azulTriangulo, .vermelho, .amarelo, .azulTurquesa, .cinzaMescla, .kit1Des0a6, .kit2Des0a6, .kit1Des6a12, .kit2Des6a12');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -363,7 +363,7 @@
                 const isKit = quadrado.classList.contains('kit'); // Verifica se é um kit
 
                 if (isKit || corSelecionada) {
-                    window.location.href = `descricaoBaby/DesenhadaMasculina.html?cor=${corSelecionada || 'default'}`; // Se for kit, usa 'default'
+                    window.location.href = `descricaoBaby/DescricaoBabyDesMasc.html?cor=${corSelecionada || 'default'}`; // Se for kit, usa 'default'
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
