--- a/canoCurtoFem.html
+++ b/canoCurtoFem.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meias Sene</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="CanoCurtoFem.css">
 </head>
 
 <body>
@@ -61,6 +61,7 @@
                             <div class="pretaKit"></div>
                             <div class="brancaKit"></div>
                             <div class="cinzaKit"></div>
+                            <div class="tresCoresKit"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -70,21 +71,6 @@
                     </div>
                 </div>
 
-
-
-
-                <div class="Quadrado-do-kit-preta-cinza-branco-cano-curto" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/CanoCurto-3-PretaCinzaBranca.png" alt=""></div>
-                    <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
-                        <h3 class="numeracao"> 34 á 38</h3>
-                    </div>
-                    <div class="preco-informacoes" id="preco-informacoes-meia-preta-cinza-branca">
-                        <h3 class="preco">R$14,10</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero" id="botao-da-meia-preta-branca-cinza">Eu Quero!</button>
-                    </div>
-                </div>
 
 
 
@@ -108,53 +94,54 @@
 
 
 
+                <div class="  parteDois">
+                    <div class="todas-as-meias-feminina-cano-curto">
+                        <div class="Quadrado-da-meia-BrancaRosa-cano-curto" id="div-meia-cano-curto">
+                            <div class="container"> <img src="img-feminino/MeiaCanoCurto-BrancaRosa.png" alt=""></div>
+                            <div class="informacoes-meia-cano-curto-feminino">
+                                <h3 class="CanoCurtoSubtitulo"> Cano Curto - Desenhada Sortida</h3>
+                                <h3 class="numeracao"> 34 á 38</h3>
+                                <div class="cores-rosa-verde">
+                                    <div class="verdeAgua"></div>
+                                    <div class="rosa"></div>
+                                </div>
+                            </div>
+                            <div class="preco-informacoes">
+                                <h3 class="preco">R$4,80</h3>
+                                <h3 class="texto-a-vista">Á Vista</h3>
+                                <button class="botao-euQuero">Eu Quero!</button>
+                            </div>
+                        </div>
 
-                <div class="Quadrado-da-meia-BrancaRosa-cano-curto" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/MeiaCanoCurto-BrancaRosa.png" alt=""></div>
-                    <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Desenhada Sortida</h3>
-                        <h3 class="numeracao"> 34 á 38</h3>
-                        <div class="cores-rosa-verde">
-                            <div class="verdeAgua"></div>
-                            <div class="rosa"></div>
+
+
+
+
+                        <div class="Quadrado-da-meia-pretaRosa-cano-curto" id="div-meia-cano-curto">
+                            <div class="container"> <img src="img-feminino/MeiaCanoCurto-PretaRosa.png" alt=""></div>
+                            <div class="informacoes-meia-cano-curto-feminino">
+                                <h3 class="CanoCurtoSubtitulo"> Cano Curto - Desenhada Sortida</h3>
+                                <h3 class="numeracao"> 34 á 38</h3>
+                                <div class="cores-roxo-pretaRosa">
+                                    <div class="roxo"></div>
+                                    <div class="pretaRosa"></div>
+
+                                </div>
+                            </div>
+                            <div class="preco-informacoes">
+                                <h3 class="preco">R$4,80</h3>
+                                <h3 class="texto-a-vista">Á Vista</h3>
+                                <button class="botao-euQuero">Eu Quero!</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$4,80</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
+
                 </div>
-
-
-
-
-
-                <div class="Quadrado-da-meia-pretaRosa-cano-curto" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/MeiaCanoCurto-PretaRosa.png" alt=""></div>
-                    <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Desenhada Sortida</h3>
-                        <h3 class="numeracao"> 34 á 38</h3>
-                        <div class="cores-roxo-pretaRosa">
-                            <div class="roxo"></div>
-                            <div class="pretaRosa"></div>
-
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$4,80</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-
-            </div>
         </section>
     </main>
 
 
-       <footer id="footer">
+    <footer id="footer">
         <div class="container-rodape">
             <div class="linha1-rodape">
                 <div class="logo-rodape">
@@ -180,8 +167,10 @@
                 <div class="acompanhe-rodape">
                     <p class="titulo-rodape">ACOMPANHE</p>
                     <div class="redes-rodape">
-                        <a href="https://www.instagram.com/meiasseneoficial/?hl=pt-br"><img src="img/instagram.png" alt="instagram" class="imgRedes-rodape"></a>
-                        <a href="https://www.facebook.com/meiasseneoficial/?locale=pt_BR"><img src="img/facebook.png" alt="facebook" class="imgRedes-rodape"></a>
+                        <a href="https://www.instagram.com/meiasseneoficial/?hl=pt-br"><img src="img/instagram.png"
+                                alt="instagram" class="imgRedes-rodape"></a>
+                        <a href="https://www.facebook.com/meiasseneoficial/?locale=pt_BR"><img src="img/facebook.png"
+                                alt="facebook" class="imgRedes-rodape"></a>
                     </div>
                 </div>
             </div>
@@ -189,22 +178,38 @@
                 <div class="institucional-rodape">
                     <p class="titulo-rodape">INSTITUCIONAL</p>
                     <div class="textoInst-rodape">
-                        <a href="rodape/representantes.html"><p class="texto2-rodape">Representantes</p></a>
-                        <a href="rodape/meios.html"><p class="texto2-rodape">Meios de pagamento e de frete</p></a>
+                        <a href="rodape/representantes.html">
+                            <p class="texto2-rodape">Representantes</p>
+                        </a>
+                        <a href="rodape/meios.html">
+                            <p class="texto2-rodape">Meios de pagamento e de frete</p>
+                        </a>
                     </div>
                 </div>
                 <div class="categorias-rodape">
                     <p class="titulo-rodape">CATEGORIAS</p>
                     <div class="categGeral-rodape">
                         <div class="subCategoria1-rodape">
-                            <a href="babyFeminino"><p class="texto2-rodape">Baby Feminino</p></a>
-                            <a href="babyMasculino"><p class="texto2-rodape">Baby Masculino</p></a>
-                            <a href="kidsFeminino"><p class="texto2-rodape">Kids Feminino</p></a>
+                            <a href="babyFeminino">
+                                <p class="texto2-rodape">Baby Feminino</p>
+                            </a>
+                            <a href="babyMasculino">
+                                <p class="texto2-rodape">Baby Masculino</p>
+                            </a>
+                            <a href="kidsFeminino">
+                                <p class="texto2-rodape">Kids Feminino</p>
+                            </a>
                         </div>
                         <div class="subCategoria2-rodape">
-                            <a href="kidsMasculino"><p class="texto2-rodape">Kids Masculino</p></a>
-                            <a href="adultoFeminino"><p class="texto2-rodape">Adulto Feminino</p></a>
-                            <a href="adultoMasculino"><p class="texto2-rodape">Adulto Masculino</p></a>
+                            <a href="kidsMasculino">
+                                <p class="texto2-rodape">Kids Masculino</p>
+                            </a>
+                            <a href="adultoFeminino">
+                                <p class="texto2-rodape">Adulto Feminino</p>
+                            </a>
+                            <a href="adultoMasculino">
+                                <p class="texto2-rodape">Adulto Masculino</p>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -238,11 +243,11 @@
                 cinza: 'img-feminino/CanoCurto-3-Cinza.png',
                 branca: 'img-feminino/CanoCurto-3-Branca.png'
             },
-            'Quadrado-da-meia-BrancaRosa-cano-curto':{
+            'Quadrado-da-meia-BrancaRosa-cano-curto': {
                 verdeAgua: 'img-feminino/MeiaCanoCurto-BrancaVerdeAgua.png',
                 rosa: 'img-feminino/MeiaCanoCurto-BrancaRosa.png'
             },
-            'Quadrado-da-meia-pretaRosa-cano-curto':{
+            'Quadrado-da-meia-pretaRosa-cano-curto': {
                 pretaRosa: 'img-feminino/MeiaCanoCurto-PretaRosa.png',
                 roxo: 'img-feminino/MeiaCanoCurto-BrancaRoxo.png'
             }
@@ -294,9 +299,10 @@
             // Evento para o botão "Eu Quero!" dentro do quadrado atual
             quadrado.querySelector('.botao-euQuero').addEventListener('click', () => {
                 const corSelecionada = selectedColor;
+                const isKit = quadrado.classList.contains('kit'); // Verifica se é um kit
 
-                if (corSelecionada) {
-                    window.location.href = `descricaoFeminina/CanoCurtoFeminina.html?cor=${corSelecionada}`;
+                if (isKit || corSelecionada) {
+                    window.location.href = `descricaoFeminina/CanoCurtoFeminina.html?cor=${corSelecionada || 'default'}`; // Se for kit, usa 'default'
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
