--- a/descricaoFeminina/CanoCurtoFeminina.html
+++ b/descricaoFeminina/CanoCurtoFeminina.html
@@ -39,19 +39,21 @@
             <div class="TodasInformacoes">
                 <div class="informacoes">
                     <h2 id="titulo"></h2>
-                    <p id="codigo"></p>    <!-- Código: 4631 -->
+                    <p id="codigo"></p> <!-- Código: 4631 -->
                 </div>
-            
+
                 <div class="linhaDescricaoDoProduto"></div>
                 <div class="informacoesPrecoTamanho">
                     <h3 class="precoContainer" id="preco">R$ 4,70</h3>
                     <h3 class="numeracao"> 34 á 38</h3>
-                    <button class="btn-shopee"> Compre na Shopee <i class="fas fa-store"></i></button>
+                    <button class="btn-shopee"> Compre na </button>
                     <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
                 </div>
             </div>
         </div>
+        <style>
 
+        </style>
         <section class="DescricaoDoProduto">
             <h2 class="titulo-DescricaoProduto">DESCRIÇÃO DO PRODUTO</h2>
             <div class="linhaUm-Descricao-do-produto"></div>
@@ -97,7 +99,7 @@
 
 
 
-                <div class="Quadrado-da-Meia-Desenhada-Baby" id="divMeiasBaby">
+                <div class="Quadrado-da-Meia-DesenhadaAzulEscuro-Baby" id="divMeiasBaby">
                     <div class="Imagem-CompreJunto"><img src="../img-baby/MeiaDesenhadaAzulEscuro-Feminina.png" alt="">
                     </div>
                     <div class="informacoesMeiaBaby">
@@ -132,10 +134,10 @@
                             <div class="VerdeAguaSapatilha"></div>
                         </div>
                     </div>
-                    <div class="preco-informacoes" id="preco-informacoes-meia-preta-cinza-branca">
+                    <div id="preco-informacoes-Baby">
                         <h3 class="preco">R$ 3,40 </h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero" id="botao-da-meia-preta-branca-cinza">Eu Quero!</button>
+                        <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
             </div>
@@ -243,7 +245,7 @@
                         document.getElementById('preco').textContent = meia.preco || '';
                         document.getElementById('titulo').textContent = meia.titulo || '';
 
-                        const mensagem = `Olá, gostaria de comprar a meia ${meia.titulo}, do preço: ${meia.preco}. Referência: ${meia.codigo || 'não informado'}.`;
+                        const mensagem = `Olá, gostaria de comprar a meia ${meia.titulo}, do preço: ${meia.preco}.  ${meia.codigo || 'não informado'}.`;
                         const whatsappLink = `https://wa.me/5516997021783?text=${encodeURIComponent(mensagem)}`;
                         whatsappButton.setAttribute('onclick', `window.open('${whatsappLink}', '_blank')`);
                     } else {
@@ -285,8 +287,11 @@
                 AzulEscuroSapatilha: '../img-baby/MeiaBrancaAzulEscuroSapatilha-Masculina.png',
                 AzulClaroSapatilha: '../img-baby/MeiaBrancaAzulClaroSapatilha-Masculina.png',
                 VerdeAguaSapatilha: '../img-baby/MeiaBrancaVerdeAguaSapatilha-Masculina.png'
-             }
+            },
 
+            'Quadrado-da-Meia-DesenhadaAzulEscuro-Baby': {
+                AzulEscuro: '../img-baby/MeiaDesenhadaAzulEscuro-Feminina.png'
+            },
         };
 
 
