--- a/kidsFem.html
+++ b/kidsFem.html
@@ -86,34 +86,28 @@
                     </div>
                 </div>
 
-                <div class="Kit-numero-um" id="div-meia-kids-femino">
-                    <div class="container"> <img src="img-kids-feminino/kit-numero-um.png" alt=""></div>
+                <div class="KitP-meias" id="div-meia-kids-femino">
+                    <div class="container"> <img src="img-kids-feminino/kitP-numero-um.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meias Kids P Feminino
-                            Kit n°1</h3>
-                        <h3 class="numeracao"> 21 á 24</h3>
-
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$12,45</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
+                        <h3 class="KidsFeminoSubtitulo">Meias Kids P Feminina - Kit com 3 pares
+                        </h3>
+                        <h3 class="numeracao"> 29 á 32</h3>
+                        <div class="cores-kit-feminino">
+                            <div class="kitPmeias1">
+                                <p>1</p>
+                            </div>
+                            <div class="kitPmeias2">
+                                <p>2</p>
+                            </div>
+                        </div>
+                        <div class="preco-informacoes">
+                            <h3 class="preco">R$12,45</h3>
+                            <h3 class="texto-a-vista">Á Vista</h3>
+                            <button class="botao-euQuero">Eu Quero!</button>
+                        </div>
                     </div>
                 </div>
-                <div class="Kit-numero-dois" id="div-meia-kids-femino">
-                    <div class="container"> <img src="img-kids-feminino/kit-numero-dois.png" alt=""></div>
-                    <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meias Kids P Feminino
-                            Kit n°2</h3>
-                        <h3 class="numeracao"> 21 á 24</h3>
-
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$12,45</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
+               
 
             </div>
             <!--MEIAS KIDS FEMININO M -->
@@ -185,36 +179,31 @@
                 <!-- FIM Meia Coração-->
 
                 <!--KIT M N°1-->
-                <div class="KitM-numero-um" id="div-meia-kids-femino">
+                <div class="KitM-meias" id="div-meia-kids-femino">
                     <div class="container"> <img src="img-kids-feminino/kitM-numero-um.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meias Kids M Feminina
-                            Kit N°1</h3>
-                        <h3 class="numeracao"> 25 á 28</h3>
-
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$13,50</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-                <!--KIT M N°2-->
-
-                <div class="KitM-numero-dois" id="div-meia-kids-femino">
-                    <div class="container"> <img src="img-kids-feminino/kitM-numero-dois.png" alt=""></div>
-                    <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meias Kids M Feminina
-                            Kit N°</h3>
-                        <h3 class="numeracao"> 25 á 28</h3>
-
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$13,50</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
+                        <h3 class="KidsFeminoSubtitulo">Meias Kids M Feminina - Kit com 3 pares
+                        </h3>
+                        <h3 class="numeracao"> 29 á 32</h3>
+                        <div class="cores-kit-feminino">
+                            <div class="kitMmeias1">
+                                <p>1</p>
+                            </div>
+                            <div class="kitMmeias2">
+                                <p>2</p>
+                            </div>
+                        </div>
+                        <div class="preco-informacoes">
+                            <h3 class="preco">R$13,50</h3>
+                            <h3 class="texto-a-vista">Á Vista</h3>
+                            <button class="botao-euQuero">Eu Quero!</button>
+                        </div>
                     </div>
                 </div>
+            </div>
+            <!--KIT M N°2-->
+
+
             </div>
             <!--FIM MEIAS M-->
 
@@ -287,23 +276,31 @@
                 <div class="KitG-meias" id="div-meia-kids-femino">
                     <div class="container"> <img src="img-kids-feminino/kitG-numero-um.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Kit G -
+                        <h3 class="KidsFeminoSubtitulo">Meias Kids G Feminina - Kit com 3 pares
                         </h3>
                         <h3 class="numeracao"> 29 á 32</h3>
-                        <div class="cores-rosa7-lilas2">
-                            <div class="lilas2"></div>
-                            <div class="rosa7"></div>
+                        <div class="cores-kit-feminino">
+                            <div class="kitGmeias1">
+                                <p>1</p>
+                            </div>
+                            <div class="kitGmeias2">
+                                <p>2</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$4,85</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
+                        <div class="preco-informacoes">
+                            <h3 class="preco">R$14,55</h3>
+                            <h3 class="texto-a-vista">Á Vista</h3>
+                            <button class="botao-euQuero">Eu Quero!</button>
+                        </div>
                     </div>
                 </div>
 
 
-            </div>
+
+
+
+
+
 
 
             </div>
@@ -408,19 +405,19 @@
             },
             'Quadrado-da-meia-pinguim': {
                 rosa3: 'img-kids-feminino/Pinguim-Pink.png',
-                branca: 'img-kids-feminino/Pinguim-Branca.png',
+                branca: 'img-kids-feminino/Pinguim-Branca.png'
             },
             'Quadrado-da-meia-motoqueira': {
                 rosa4: 'img-kids-feminino/Motoqueira-Lilas.png',
-                lilas: 'img-kids-feminino/Motoqueira-Rosa.png',
+                lilas: 'img-kids-feminino/Motoqueira-Rosa.png'
             },
             'Quadrado-da-meia-coracao': {
                 cinza2: 'img-kids-feminino/Coração-Cinza.png',
-                rosa5: 'img-kids-feminino/Coração-Rosa.png',
+                rosa5: 'img-kids-feminino/Coração-Rosa.png'
             },
             'Quadrado-da-meia-keep': {
                 cinza3: 'img-kids-feminino/Keep-Calm-Cinza.png',
-                branca2: 'img-kids-feminino/Keep-Calm-Branca.png',
+                branca2: 'img-kids-feminino/Keep-Calm-Branca.png'
             },
             'Quadrado-da-meia-panda': {
                 rosa6: 'img-kids-feminino/Panda-Rosa.png',
@@ -429,7 +426,21 @@
             'Quadrado-da-meia-maquiagem': {
                 rosa7: 'img-kids-feminino/Maquiagem-Rosa.png',
                 lilas2: 'img-kids-feminino/Maquiagem-Lilas.png'
-            }
+            },
+            'KitG-meias': {
+                kitGmeias1: 'img-kids-feminino/kitG-numero-um.png',
+                kitGmeias2: 'img-kids-feminino/kitG-numero-dois.png'
+            },
+            'KitM-meias': {
+                kitMmeias1: 'img-kids-feminino/kitM-numero-um.png',
+                kitMmeias2: 'img-kids-feminino/kitM-numero-dois.png'
+            },
+            'KitP-meias': {
+                kitPmeias1: 'img-kids-feminino/kitP-numero-um.png',
+                kitPmeias2: 'img-kids-feminino/kitP-numero-dois.png'
+            },
+
+
         };
 
         // Para cada quadrado de meia na seção "todas-as-meias-feminina-kids"
@@ -438,7 +449,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.verde, .rosa1, .vermelho, .preto, cinza, .rosa2, rosa3, .rosa4, .lilas, .branca, .branca2, .cinza3, .cinza2, .rosa5, .verde2, .rosa6, .rosa7, .lilas2');
+            const cores = quadrado.querySelectorAll('.verde, .rosa1, .vermelho, .preto, cinza, .rosa2, rosa3, .rosa4, .lilas, .branca, .branca2, .cinza3, .cinza2, .rosa5, .verde2, .rosa6, .rosa7, .lilas2, .kitGmeias1, .kitGmeias2, .kitMmeias2, .kitMmeias1, .kitPmeias1, .kitPmeias2');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
